[package]
name = "convert"
version = "0.1.0"
edition = "2021"
description = "the wasm binding for asciimath-unicode"
repository = "https://github.com/hafaio/ascii-math-unicode"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
asciimath-unicode = "0.2"
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
